# pydev_test_mid_candidate

./: .dockerignore  .gitignore  .pylintrc  LICENSE  Makefile  README.md  openapi.yml  poetry.toml  pydev_test_mid.code-workspace  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
nvs_ex/: __init__.py  ex_1.py  ex_2.py  ex_3.py  ex_4.py  utils.py
