[tool.poetry]
name = "pydev-test-mid"
version = "0.1.0"
description = "Novartis Python Developer Test"
authors = ["Albert Ruiz <albert.ruiz@novartis.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nvs_ex"}]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
flask = "^2.2.2"
loguru = "^0.6.0"
matplotlib = "^3.6.2"
pandas = "^1.5.1"
pmdarima = "^2.0.1"
plotly = "^5.11.0"
prophet = "^1.1.1"
sktime = "^0.14.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
docformatter = "^1.5.0"
pylint = "^2.15.5"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
